--- a/src/assets/styles/modules/equip-card.scss
+++ b/src/assets/styles/modules/equip-card.scss
@@ -34,6 +34,10 @@
       margin-bottom: 16px;
       @include fsl(16px, 110%);
     }
+
+    #{$comp}__text {
+      color: $color-gray;
+    }
   }
 
   &__image {
