--- a/src/views/pages/equip-detail.pug
+++ b/src/views/pages/equip-detail.pug
@@ -30,7 +30,7 @@ block content
             .equip-page__features-col
               h4.equip-page__features-title 
                 |Особенности токарных станков с ЧПУ
-              p
+              p.equip-page__features-text
                 |Как и все оборудование с числовым программным управлением, токарные станки этого типа работают практически автономно, что позволяет максимально оптимизировать производство.
         .equip-page__features.equip-page__inner
           .equip-page__features-row 
@@ -44,8 +44,8 @@ block content
             .equip-page__features-col
               h4.equip-page__features-title 
                 |Надежное оборудование от «ИРЛЕН-ИНЖИНИРИНГ»
-              p.equip-page__features-text
-                |Как и все оборудование с числовым программным управлением, токарные станки этого типа работают практически автономно, что позволяет максимально оптимизировать производство.
+              p.equip-page__features-caption
+                |Наша компания предлагает токарные станки по металлу различных видов.
               h4.equip-page__features-title 
                 |Вы можете приобрести станки:
               ul.features-list
