--- a/src/views/pages/equip-cat-1.pug
+++ b/src/views/pages/equip-cat-1.pug
@@ -14,4 +14,4 @@ block content
         +model-tabs(items = ['Модели', 'Возможные опции'])
         .equip-page__grid.equip-page__grid--alt.margin-top.margin-top--md 
           - for (i = 0; i < 12; i++)
-            +equip-card.equip-card--sm(noicon = true text = 'Используется для обработки деталей с соотношением длины к диаметру менее 3. При этом, АПТ работает так же, как обычный токарный станок, т.е. без дополнительной поддержки заготовки.')
+            +equip-card.equip-card--sm( text = 'Используется для обработки деталей с соотношением длины к диаметру менее 3. При этом, АПТ работает так же, как обычный токарный станок, т.е. без дополнительной поддержки заготовки.')
