--- a/src/assets/styles/pages/instrument-card.scss
+++ b/src/assets/styles/pages/instrument-card.scss
@@ -34,6 +34,10 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+
+      @media (max-width: ($breakpoint - 1px)) {
+        margin-top: 12px;
+      }
     }
   }
   &__section-breadcrumbs {
