--- a/src/views/pages/equip-card.pug
+++ b/src/views/pages/equip-card.pug
@@ -59,7 +59,7 @@ block content
             ul.equip-detail__list 
               - for (i = 0; i < 4; i++)
                 li.equip-detail__list-item 
-                  .equip-detail__list-text 
+                  .equip-detail__list-text.small 
                     |Перемещение по оси X, мм
                   .equip-detail__list-text 
                     |300
