--- a/src/assets/styles/pages/docs-page.scss
+++ b/src/assets/styles/pages/docs-page.scss
@@ -2,6 +2,9 @@
 
   &__row {
     display: flex;
+    @media (max-width: ($breakpoint - 1px)) {
+      display: block;
+    }
     justify-content: space-between;
     align-items: center;
   }
@@ -11,6 +14,10 @@
     &:nth-child(2) {
       flex-shrink: 0;
       width: calc(#{$col-part-d} * 6 - #{$col-gap-d});
+      @media (max-width: ($breakpoint - 1px)) {
+        margin-top: 16px;
+        width: 100%;
+      }
     }
   }
 
@@ -20,21 +27,42 @@
 
   &__text {
     @include fsl(18px, 140%);
+    @media (max-width: ($breakpoint - 1px)) {
+      @include fsl(16px, 140%);
+    }
   }
 
   &__image {
     margin-left: auto;
     
     max-width: 135px;
+    @media (max-width: ($breakpoint - 1px)) {
+      margin-left: 0;
+      max-width: calc(#{$col-width-m});
+      border-radius: 2px;
+    }
+    border-radius: 4px;
     display: block;
   }
 
   &__selects {
     display: flex;
+    @media (max-width: ($breakpoint - 1px)) {
+      display: block;
+    }
     justify-content: space-between;
   }
   &__selects-item {
     flex-shrink: 0;
     width: calc(#{$col-part-d} * 3 - #{$col-gap-d});
+    @media (max-width: ($breakpoint - 1px)) {
+      width: 100%;
+    }
+
+    &:not(:first-child) {
+      @media (max-width: ($breakpoint - 1px)) {
+        margin-top: 8px;
+      }
+    }
   }
 }
