--- a/src/views/pages/cart.pug
+++ b/src/views/pages/cart.pug
@@ -15,7 +15,7 @@ block content
           .cart-page__col 
             .loyalty-card 
               .loyalty-card__icon 
-                +warning-svg
+                +warning-svg.loyalty-card__svg
               .loyalty-card__content 
                 .loyalty-card__title 
                   |Действует программа лояльности
@@ -50,9 +50,12 @@ block content
                             |Артикул: 9353014BTC
                     .cart-page__item-col
                       .cart-page__item-container 
-                        +counter.counter--md
+                        .cart-page__counter
+                          +counter.counter--md
                     .cart-page__item-col
-                      .cart-page__item-container 
+                      .cart-page__item-container
+                        .cart-page__item-caption 
+                          |цена
                         .tooltip
                           .cart-page__item-price.tooltip__row
                             |€ 93.42
@@ -65,6 +68,8 @@ block content
                           |€ 103.55
                     .cart-page__item-col
                       .cart-page__item-container
+                        .cart-page__item-caption 
+                          |итого
                         .cart-page__item-price 
                           |€ 1279.2
                     .cart-page__item-col
@@ -88,23 +93,29 @@ block content
                 .cart-page__card-label 
                   |товары
               .cart-page__card-body 
-                - for (i = 0; i < 3; i++)
+                - for (i = 0; i < 2; i++)
                   .cart-page__card-item 
                     .cart-page__label 
                       |Позиций: 22
                     .cart-page__card-row 
                       .cart-page__card-col
-                        p 
+                        p.cart-page__caption
                           |Сумма, €
                       .cart-page__card-col
-                        .cart-page__card-text 
-                          |1222.45
+                        .tooltip
+                          .cart-page__card-text.tooltip__row
+                            |1222.45
+                            span.tooltip__span
+                              .tooltip__icon 
+                                +tooltip-svg
+                          .tooltip__container   
+                            |Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consectetur deserunt cumque?
               .cart-page__card-bot
                 ul.cart-page__card-list
                   li.cart-page__card-thing 
                     .cart-page__card-row 
                       .cart-page__card-col
-                        p 
+                        p.cart-page__caption
                           |Сумма без скидки, ₽
                       .cart-page__card-col
                         .cart-page__card-text 
@@ -112,7 +123,7 @@ block content
                   li.cart-page__card-thing 
                     .cart-page__card-row 
                       .cart-page__card-col
-                        p 
+                        p.cart-page__caption
                           |Скидка, ₽
                       .cart-page__card-col
                         .cart-page__card-text 
@@ -120,9 +131,9 @@ block content
                 .cart-page__card-row 
                   .cart-page__card-col
                     .cart-page__card-price 
-                      |Итого, ₽
+                      |Предварительная стоимость, ₽
                   .cart-page__card-col
-                    .cart-page__card-price 
+                    .cart-page__card-num
                       |89 0000
                 .cart-page__card-caption 
                   |Цена с НДС по курсу ЦА на 25.06.2021
