--- a/src/views/pages/search.pug
+++ b/src/views/pages/search.pug
@@ -18,25 +18,25 @@ block content
             .search-page__col 
               input.search-page__input(type="text")
             .search-page__col 
-              +button
+              +button.button--wide
                 |Поиск
         .section__row.margin-top
           .section__col
-            .aside 
-              each item in data.searchAside
-                .aside__card
-                  .aside__container 
-                    .aside__title 
-                      |#{item.title} 
-                      span.aside__count 
-                        |#{item.count}
-                    ul.aside__list.aside__inner
-                      each el in item.items
-                        li.aside__item 
-                          |#{el.text}
-                          span.aside__count 
-                            |#{el.count}
-                    
+            .search-page__aside
+              .aside 
+                each item in data.searchAside
+                  .aside__card
+                    .aside__container 
+                      .aside__title 
+                        |#{item.title} 
+                        span.aside__count 
+                          |#{item.count}
+                      ul.aside__list.aside__inner
+                        each el in item.items
+                          li.aside__item 
+                            |#{el.text}
+                            span.aside__count 
+                              |#{el.count}
           .section__col
             .search-page__grid 
               - for (i = 0; i < 12; i++)
